--- a/HomePage/home.css
+++ b/HomePage/home.css
@@ -2,16 +2,19 @@ body {
     margin: auto;
 }
 
-header {
-    height: 75px;
-    /* background-color: rgb(85, 255, 79); */
-    background-color: rgb(255, 238, 1);
+nav {
+    background-color: rgb(38, 95, 56);
+    border-bottom: 1px solid;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header {
+    height: 90px;
 }
 
 .introandselect {
     height: 650px;
-    background: url(Images/searchpic.jpg) center/cover;
+    background: url(Images/burger.jpg) right/cover;
     background-repeat: no-repeat;
     /* background-position: center ;
     background-size: cover; */
@@ -23,8 +26,8 @@ header {
 }
 
 footer {
-    height:300px;
-    border: 3px double ;
+    height:350px;
+    background-color:rgb(184, 192, 112);
 }
 
 .logo {
@@ -36,8 +39,8 @@ footer {
     margin-top: 6px;
     margin-left: 2%;
     margin-right: 10%;
-    color:white;
-    background-color: rgb(38, 95, 56);
+    color:rgb(25, 63, 25);
+    background-color: rgb(255, 238, 1);
 }
 
 .logo > span {
@@ -70,7 +73,7 @@ footer {
     height: 100px;
     width: 550px;
     margin-top: 100px;
-    margin-left: 200px;
+    margin-left: 120px;
     color: rgb(255, 255, 255);
 }
 
@@ -79,7 +82,7 @@ footer {
     height: 50px;
     width: 550px;
     margin-top: 240px;
-    margin-left: 170px;
+    margin-left: 140px;
     color: rgb(255, 238, 1);
 }
 
@@ -87,13 +90,13 @@ footer {
     height: 40px;
     width: 500px;
     position: absolute;
-    margin-top: 340px;
-    margin-left: 170px;
+    margin-top: 320px;
+    margin-left: 100px;
 }
 
 select {
     margin-left: 20px;
-    height: 31px;
+    height: 40px;
     width: 220px;
     border: 0px;
     border-radius: 30px;
@@ -161,4 +164,10 @@ select {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     color: rgb(20, 70, 20);
+}
+.social {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    float: left;
+    width: 10%;
 }
